# upvoted-archiver

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yaml
src/reddit/: configs.rs  mod.rs  upvoted.rs
src/test/: test.rs
upvoted_archiver/: main.rs
upvoted_archiver/lib/: mod.rs
upvoted_archiver/test/: test.rs
